# osdlyrics

./: README  README.md  configure.ac
daemon/: Makefile.am  ini_config.py  lrcdb.py  lyrics.py  lyricsource.py  main.py  player.py
data/: Makefile.am  org.osdlyrics.Config.service.in  org.osdlyrics.Daemon.service.in  osdlyrics-daemon.in
debian/: changelog  control  copyright  osdlyrics.install  rules
debian/patches/: no-mimetypes  pypkg  series  werror
debian/source/: lintian-overrides
lyricsources/lrc123/: Makefile.am  lrc123.py  org.osdlyrics.LyricSourcePlugin.lrc123.service.in
lyricsources/netease/: Makefile.am  netease.py  org.osdlyrics.LyricSourcePlugin.netease.service.in
lyricsources/viewlyrics/: Makefile.am  org.osdlyrics.LyricSourcePlugin.viewlyrics.service.in  viewlyrics.py
lyricsources/xiami/: Makefile.am  org.osdlyrics.LyricSourcePlugin.xiami.service.in  xiami.py
players/http/: Makefile.am  error.py  http-player.py  http.py  org.osdlyrics.PlayerProxy.Http.service.in  server.py  validator.py
players/mpd/: Makefile.am  mpd_proxy.py  org.osdlyrics.PlayerProxy.Mpd.service.in
players/mpris1/: Makefile.am  mpris1.py  org.osdlyrics.PlayerProxy.Mpris1.service.in
players/mpris2/: Makefile.am  mpris2.py  org.osdlyrics.PlayerProxy.Mpris2.service.in
po/: POTFILES.skip
python/: Makefile.am  __init__.py.in  app.py  config.py  errors.py  lrc.py  lyricsource.py  metadata.py  pattern.py  player_proxy.py  timer.py  utils.py
python/dbusext/: Makefile.am  app.py  property.py  service.py
src/: Makefile.am  ol_app_chooser_widget.c  ol_app_info.c  ol_config_proxy.c  ol_config_updater.c  ol_display_module.c  ol_image_button.c  ol_keybinder.c  ol_lrc.c  ol_lyric_source.c  ol_lyrics.c  ol_option.c  ol_osd_module.c  ol_osd_toolbar.c  ol_osd_window.c  ol_player.c  ol_scroll_module.c  ol_scroll_window.c  ol_stock.c  ol_trayicon.h
src/tests/: Makefile.am
tools/: Makefile.am  create-lyricsource.py  osdlyrics-create-lyricsource.in
